# GSB-Selenium

./: .env  .env.example  .gitignore  CONFIGURATION_UPDATE.md  MIGRATION_SUMMARY.md  PROXY_TEST.py  README.md  SELENIUM_STEALTH_UPDATE.md  install_selenium_wire_cert.py  pyproject.toml  test_stealth_simple.py
chrome_dir/: Local State  RunningChromeVersion
chrome_dir/GrShaderCache/: data_0  data_1  f_000001  f_000003  f_000005  f_000007  f_000009  f_00000a  f_00000d  f_00000e  f_00000f  f_000011  f_000012  f_000013  f_000016  f_000017  f_000018  f_000019  f_00001b  f_00001c  f_00001d  f_00001e  f_000020  index
chrome_dir/GraphiteDawnCache/: index
chrome_dir/Profile 1/: DIPS-wal  History  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  TransportSecurity  Web Data
chrome_dir/ShaderCache/: index
data/: search_terms.txt
docs/: OXYLABS_INTEGRATION.md
examples/: basic_usage.py  oxylabs_proxy_example.py  parallel_execution.py  proxy_example.py
gsb_selenium/: __init__.py  cli.py
gsb_selenium/core/: __init__.py  aws_config.py  config.py  gsb.py
gsb_selenium/utils/: __init__.py  captcha_solver.py  logger.py  mongo_search_manager.py  profile_manager.py  proxy_tester.py  search_manager.py  stealth_driver.py  timing.py  webgl_spoofer.py
scripts/: verify_installation.py
temp_profiles/Profile_1849_main/: Local State
temp_profiles/Profile_2399_main/: History  Local State  Preferences  Visited Links
tests/: __init__.py  test_core_functionality.py  test_proxy.py  test_selenium_stealth.py  test_stealth.py
(+330 files in other folders)
